--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
-<html>
-john porkkkkkkk
-john borg
-
-
-
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Website</title>
+</head>
+<body>
+  <!------Heading------->
+  <h1> Tate Van der Walts Website </h1>
+  <h3> This is a basic website </h3>
+  <!------- End Heading -------->
+  <center>
+    <img
+         src=
+         "https://i.kym-cdn.com/photos/images/original/002/418/818/49a.jpg">
+    <br>
+         <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/fv2XB4fLSEtI-oHpLcrYUJdXW_EL-BjeKCSUkc_I2Z0/embed"></iframe>
+</body>
 </html>
