--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <title>My Website</title>
 </head>
 <body>
+    <nav>
+    <center>
+    <li><a href="index.html"> HOME  </a> </li>
+    <li><a href="projects.html"> APPS     </a>   </li>
+    <li><a href="https://www.powayusd.com/en-us/schools/hs/wvhs/Calendars/Schedules/Bell-Schedule"> 
+      WESTVIEW SCHEDULE </a></li>
+  </nav>
+  <br>
+  <br>
   <!------Heading------->
   <h1> Tate Van der Walts Website </h1>
   <h3> This is a basic website </h3>
@@ -16,6 +25,6 @@
          src=
          "https://i.kym-cdn.com/photos/images/original/002/418/818/49a.jpg">
     <br>
-      
+        
 </body>
 </html>
