--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,21 @@
+</head>
+<body>
+    <nav>
+    <center>
+    <li><a href="index.html"> HOME  </a> </li>
+    <li><a href="projects.html"> APPS     </a>   </li>
+    <li><a href="https://www.powayusd.com/en-us/schools/hs/wvhs/Calendars/Schedules/Bell-Schedule"> 
+      WESTVIEW SCHEDULE </a></li>
+  </nav>
+  <br>
+  <br>
+   <br>
+      <center> 
+      <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/fv2XB4fLSEtI-oHpLcrYUJdXW_EL-BjeKCSUkc_I2Z0/embed"></iframe>
 
+<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/aTy0mAMsLUC1ejiKrZx1xvnSZRyIu2WzOcQ8qcWUrQM/embed"></iframe>></iframe>
+
+ <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/2jkj56nYbs6k3StpLMBN5kt7WbHq6mu4MrS-ojRdJq0/embed"></iframe>
+  
+    
+  
