--- a/projects.html
+++ b/projects.html
@@ -17,5 +17,28 @@
 
  <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/2jkj56nYbs6k3StpLMBN5kt7WbHq6mu4MrS-ojRdJq0/embed"></iframe>
   
-    
-  
+        <style>
+    nav {
+  list-style-type: none;
+  position: fixed;
+  background-color:orange;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  padding: 12px;
+}
+
+li {
+  display: inline;
+  padding: 13px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+li:hover {
+  background-color: green;
+}
+  <style>
